# NotebookScraper

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  README.md  doc-scraper.toml.default  pyproject.toml  scrapy.cfg
.gitlab/merge_request_templates/: MR_template.md
notebookscraper/: items.py  middlewares.py  pipelines.py  settings.py
notebookscraper/spiders/: notebookscraper.py
scrapyPDF/: items.py  middlewares.py  pipelines.py  settings.py
scrapyPDF/spiders/: pdfScraper.py
