[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
dynamic = ["version"]
name = "NotebookScraper"
description = "Crawl a web site and export it to text files easily usable in NotebookLM"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "scrapy>=2.11.2",
    "tomli>=2.0.1",
    "w3lib>=2.2.1",
]

[tool.hatch.build.targets.wheel]
packages = ["notebookscraper"]

[tool.hatch.version]
source = "vcs"

